...
      "isCommentAutoGenerated" : true
    },
    "Account tab" : {
      "comment" : "A link to the \"Account\" tab on a mobile device.",
      "isCommentAutoGenerated" : true
    },
    "Add to Cart" : {

    },
    "Added" : {

    },
    "Adding..." : {

    },
    "Apple Pay" : {
...
