...
            logoImageView.widthAnchor.constraint(lessThanOrEqualToConstant: 90),
            logoImageView.heightAnchor.constraint(equalToConstant: 44)
        ])

        // Catalog grid view
        productGridController.tabBarItem.image = UIImage(systemName: "square.grid.2x2")
        productGridController.tabBarItem.title = "Catalog"
        productGridController.navigationItem.titleView = logoImageView
        catalogCartButton = createCartButtonWithBadge()
        productGridController.navigationItem.rightBarButtonItem = catalogCartButton

        // Product Gallery
        productGalleryController.tabBarItem.image = UIImage(systemName: "appwindow.swipe.rectangle")
...
        productGalleryController.navigationItem.titleView = logoImageView
        galleryCartButton = createCartButtonWithBadge()
        productGalleryController.navigationItem.rightBarButtonItem = galleryCartButton

        // Cart (UI Kit)
        swiftUICartController.tabBarItem.image = UIImage(systemName: "cart")
        swiftUICartController.tabBarItem.title = "Cart"
        swiftUICartController.tabBarItem.accessibilityIdentifier = AccessibilityIdentifiers.Tabs.cart
        swiftUICartController.navigationItem.title = "Cart (SwiftUI)"

        // Account
        accountController.tabBarItem.image = UIImage(systemName: "person.circle")
        accountController.tabBarItem.title = "Log in"
...
