<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/shopify_checkout_kit_close_button"
        android:icon="@drawable/close"
        android:title="@string/close_checkout"
        app:showAsAction="always" />
</menu>
