appId: ${E2E_APP_ID}
---
- runFlow: close.yaml

- extendedWaitUntil:
    visible:
      id: catalog-tab
    timeout: 10000

- tapOn:
    id: cart-tab

- extendedWaitUntil:
    visible:
      id: cart-empty-message
    timeout: 10000
